we don't push big data to github

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 .ipynb_checkpoints
+**/18_paraly_data_TEI.xml
+**/19_paraly_data_TEI.xml
+**/20_paraly_data_TEI.xml
+**18_paraly.cec6
+**19_paraly.cec6
+**20_paraly.cec6
+**/.DS_Store
+.idea
